--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
   }
 }
 
+.me {
+  color: blue;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
